force-app/main/default/objects/Queue_Routing_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to make rule active or inactive</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Controls the order in which Rules are evaluated</description>
        <inlineHelpText>Controls the order in which Rules are evaluated</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <description>Stores the Queue where the ACP will be routed to</description>
        <label>Queue</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CENTRAL_ADMISSIONS_BUSECO</fullName>
                    <label>CENTRAL ADMISSIONS - BUSECO</label>
                </value>
                <value>
                    <fullName>CENTRAL_ADMISSIONS_IT</fullName>
                    <label>CENTRAL ADMISSIONS - IT</label>
                </value>
                <value>
                    <fullName>CENTRAL_ADMISSIONS_MNHS</fullName>
                    <label>CENTRAL ADMISSIONS - MNHS</label>
                </value>
                <value>
                    <fullName>CENTRAL_ADMISSIONS_MADA</fullName>
                    <label>CENTRAL ADMISSIONS - MADA</label>
                </value>
                <value>
                    <fullName>CENTRAL_ADMISSIONS_ARTS</fullName>
                    <label>CENTRAL ADMISSIONS - ARTS</label>
                </value>
                <value>
                    <fullName>CENTRAL_ADMISSIONS_EDUCATION</fullName>
                    <label>CENTRAL ADMISSIONS - EDUCATION</label>
                </value>
                <value>
                    <fullName>CENTRAL_ADMISSIONS_ENGINEERING</fullName>
                    <label>CENTRAL ADMISSIONS - ENGINEERING</label>
                </value>
                <value>
                    <fullName>CENTRAL_ADMISSIONS_SCIENCE</fullName>
                    <label>CENTRAL ADMISSIONS - SCIENCE</label>
                </value>
                <value>
                    <fullName>CENTRAL_ADMISSIONS_LAW</fullName>
                    <label>CENTRAL ADMISSIONS - LAW</label>
                </value>
                <value>
                    <fullName>CENTRAL_ADMISSIONS_PHARMACY</fullName>
                    <label>CENTRAL ADMISSIONS - PHARMACY</label>
                </value>
                <value>
                    <fullName>CENTRAL_ADMISSIONS_MC</fullName>
                    <label>CENTRAL ADMISSIONS - MC</label>
                </value>
                <value>
                    <fullName>FACULTY_IT</fullName>
                    <label>FACULTY - IT</label>
                </value>
                <value>
                    <fullName>FACULTY_BUSECO</fullName>
                    <label>FACULTY - BUSECO</label>
                </value>
                <value>
                    <fullName>FACULTY_MNHS</fullName>
                    <label>FACULTY - MNHS</label>
                </value>
                <value>
                    <fullName>FACULTY_EDUCATION</fullName>
                    <label>FACULTY - EDUCATION</label>
                </value>
                <value>
                    <fullName>FACULTY_ARTS</fullName>
                    <label>FACULTY - ARTS</label>
                </value>
                <value>
                    <fullName>CENTRAL_ADMISSIONS_INDONESIA</fullName>
                    <label>CENTRAL ADMISSIONS - INDONESIA</label>
                </value>
                <value>
                    <fullName>FACULTY_MD</fullName>
                    <label>FACULTY - MD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Queue Routing Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Order__c</columns>
        <columns>NAME</columns>
        <columns>Queue__c</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Queue Routing Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Queue Routing Rule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>